crates/parser/tests/cases/snapshots/cases__errors__expr_dotted_number.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(expr_dotted_number), expressions::parse_expr, \"3.14\")"

---
error: floats not supported
  ┌─ expr_dotted_number:1:1
  │
1 │ 3.14
  │ ^^^^


